feat: apply auto generated modals for OOBIs (#91)
Co-authored-by: Patrick Vu <patrick.vu@sotatek.com>